--- a/reveal/index.html
+++ b/reveal/index.html
@@ -30,7 +30,7 @@
             </a>
             <h3>The HTML Presentation Framework</h3>
             <p>
-                <small>Created by <a href="http://hakim.se">Hakim El Hattab</a> and <a href="https://github.com/hakimel/reveal.js/graphs/contributors">contributors</a></small>
+                <small>test <a href="http://hakim.se">Hakim El Hattab</a> and <a href="https://github.com/hakimel/reveal.js/graphs/contributors">contributors</a></small>
             </p>
         </section>
 
