--- a/content/index.html
+++ b/content/index.html
@@ -140,7 +140,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <br /><h1>About</h1>
 <p>cmsimde_site</p>
-<p>test</p><br /> </div>
+<p>test</p>
+<p>20220419</p><br /> </div>
         
     <!-- footer -->
       <div class="container">
